<resources>
    <string name="app_name" translatable="false">Tiguidou</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title">Tips and Taxes</string>
    <string name="prix_initial">Initial Price :</string>
    <string name="price">Price</string>
    <string name="tax" translatable="false">TAXES</string>
    <string name="taxfinal">Tax :</string>
    <string name="tipsTitle" translatable="false">TIPS</string>
    <string name="_15" translatable="false">15%</string>
    <string name="_20" translatable="false">20%</string>
    <string name="_25" translatable="false">25%</string>
    <string name="OtherTaxPerc">Other</string>
    <string name="tips" translatable="false">Tips :</string>
    <string name="total" translatable="false">Total :</string>
    <string name="otherperc">Your %</string>
    <string name="chicoutimi" translatable="false">Chicoutimi</string>
    <string name="soleil">Sunny</string>
    <string name="soleilnuageux">Few Clouds</string>
    <string name="nuage">Clouds</string>
    <string name="pluvieux">Rainy</string>
    <string name="tonnerre">Storm</string>
    <string name="neige">Snow</string>
    <string name="temperature">Temperature :</string>
    <string name="vent">Wind :</string>
    <string name="pression">Pressure :</string>
    <string name="c" translatable="false">°C</string>
    <string name="km_h" translatable="false">Km/h</string>
    <string name="hpa" translatable="false">hPa</string>
    <string name="titleCur">Currency Converter</string>
    <string name="startName">from :</string>
    <string name="toName">to : </string>
    <string name="prixStart">Start Price</string>
    <string name="deviseSearch">Research</string>
    <string name="refresh">Convert</string>
    <string name="resultTitle" translatable="false">=</string>
</resources>
