<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleCur"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/peter_river"/>



    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/prixStart"
        android:id="@+id/prixInit"
        android:text=""
        android:textSize="20sp"
        android:inputType="number"
        android:textAlignment="center"/>

    <View
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startName"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="20dp"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


        <com.google.android.material.textfield.TextInputEditText
            android:gravity=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/deviseSearch"
            android:id="@+id/InputSearch1"
            android:text=""
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_marginHorizontal="30dp"
            />


    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        />

</LinearLayout>


    <View
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toName"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputEditText
            android:gravity=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/deviseSearch"
            android:id="@+id/InputSearch2"
            android:text=""
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_marginHorizontal="30dp"/>

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            />



    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultTitle"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resultPrice"
        android:text="..."
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"/>

    <View
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>


    <Button
        android:id="@+id/convertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:layout_margin="20dp"/>

</LinearLayout>