<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_marginTop="-10dp">

        <ProgressBar
            android:id="@+id/progress_loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/meteoView"
        android:visibility="gone"
        android:layout_marginTop="-85dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ville"
            android:textSize="50sp"
            android:textStyle="bold"
            style="@style/AppTheme.Title"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="213dp"
            android:id="@+id/image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textTemp"
            android:textStyle="bold"
            style="@style/AppTheme.Description"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                style="@style/AppTheme.Details"/>

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTheme.Values"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c"
                style="@style/AppTheme.Units"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vent"
                style="@style/AppTheme.Details"/>

            <TextView
                android:id="@+id/vent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTheme.Values"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km_h"
                style="@style/AppTheme.Units"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pression"
                style="@style/AppTheme.Details"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pression"
                style="@style/AppTheme.Values"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hpa"
                style="@style/AppTheme.Units"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>